# GuardSys

./: .gitattributes  .gitignore  @ohos.guardsys.d.ts  @ohos.guardsys_napi.d.ts  BUILD.gn  README.md  bundle.json  init.A311D.cfg
guardsys/: BUILD.gn
guardsys/include/: alarm_control.h  sensor_hc_sr501.h  sensor_mq2.h  sensor_sht30.h
guardsys/napi/: BUILD.gn  guardsys_napi.cpp  guardsys_napi.h  sht30_napi.cpp
guardsys/src/: main.c  sensor_sht30.c
include/: alarm_control.h  face_recognize.h  sensor_hc_sr501.h  sensor_mq2.h
migrate/: README.md
migrate/SeetaFace2/: BUILD.gn  bundle.json
migrate/SeetaFace2/FaceDetector/: BUILD.gn
migrate/SeetaFace2/FaceLandmarker/: BUILD.gn
migrate/SeetaFace2/FaceRecognizer/: BUILD.gn
migrate/SeetaFace2/FaceTracker/: BUILD.gn
migrate/SeetaFace2/QualityAssessor/: BUILD.gn
migrate/SeetaFace2/SeetaNet/: BUILD.gn
models/: README.md
napi/: BUILD.gn  alarm_napi.cpp  face_recognize_napi.cpp  guardsys_napi.cpp  hc_sr501_napi.cpp  mq2_napi.cpp
src/: alarm_control.c  face_recognize.cpp  sensor_hc_sr501.c  sensor_mq2.c  sensor_sht30.c
test/: BUILD.gn  main.cpp
