import("//build/ohos.gni")

group("SeetaFace2") {
    deps = [
        "//third_party/SeetaFace2/SeetaNet:seetanet",
        "//third_party/SeetaFace2/FaceDetector:facedetector",
        "//third_party/SeetaFace2/FaceLandmarker:facelandmarker",
        "//third_party/SeetaFace2/FaceRecognizer:facerecognizer",
        "//third_party/SeetaFace2/QualityAssessor:qualityassessor",
        # "//third_party/SeetaFace2/FaceTracker:facetracker",
    ]
}